manifests/deploy-broken-cloudant.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cloudant-db-second
  labels:
    app: microprofile-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: cloudant-deployment
        version: v2
    spec:
      containers:
      - name: cloudant-db
        image: ibmcom/cloudant-developer:1.0.1
        imagePullPolicy: Always
        securityContext:
          privileged: true
        ports:
          - containerPort: 80
        volumeMounts:
        - name: cloudant-pv2
          mountPath: /srv
      volumes:
        - name: cloudant-pv2
          persistentVolumeClaim:
            claimName: cloudant-pv-claim2
