manifests/deploy-schedule.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microservice-schedule-sample
  labels:
    app: microprofile-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: schedule-deployment
        app: schedule-deployment
        version: v1
    spec:
      containers:
      - name: microservice-schedule
        #change the image name
        image: registry.ng.bluemix.net/<namespace>/microservice-schedule
        ports:
          - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: schedule-service
  labels:
    app: microprofile-app
  namespace: default
spec:
  ports:
    - port: 9080
      targetPort: 9080
      name: http
  selector:
    name: schedule-deployment
