manifests/deploy-speaker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microservice-speaker-sample
  labels:
    app: microprofile-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: speaker-deployment
        app: speaker-deployment
        version: v1
    spec:
      containers:
      - name: microservice-speaker
        #change the image name
        image: journeycode/microservice-speaker
        ports:
          - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: speaker-service
  labels:
    app: microprofile-app
spec:
  ports:
    - port: 9080
      targetPort: 9080
      name: http
  selector:
    name: speaker-deployment
