manifests/istio-gateway-vote-timeout.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-main-routes
spec:
  hosts:
    - "*"
  gateways:
    - microservice-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: webapp-service
            port:
              number: 9080
    - match:
        - uri:
            prefix: /vote
      route:
        - destination:
            host: vote-service
            port:
              number: 9080
      timeout: 1s
    - match:
        - uri:
            prefix: /schedule
      route:
        - destination:
            host: schedule-service
            port:
              number: 9080
    - match:
        - uri:
            prefix: /speaker
      route:
        - destination:
            host: speaker-service
            port:
              number: 9080
    - match:
        - uri:
            prefix: /sessions
      route:
        - destination:
            host: session-service
            port:
              number: 9080
    - route:
        - destination:
            host: webapp-service
            port:
              number: 9080
