manifests/istio-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservice-gateway
spec:
  selector:
    istio: ingressgateway  # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-main-routes
spec:
  hosts:
    - "*"
  gateways:
    - microservice-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: webapp-service
            port:
              number: 9080
    - match:
        - uri:
            prefix: /vote
      route:
        - destination:
            host: vote-service
            port:
              number: 9080
    - match:
        - uri:
            prefix: /schedule
      route:
        - destination:
            host: schedule-service
            port:
              number: 9080
    - match:
        - uri:
            prefix: /speaker
      route:
        - destination:
            host: speaker-service
            port:
              number: 9080
    - match:
        - uri:
            prefix: /sessions
      route:
        - destination:
            host: session-service
            port:
              number: 9080
    - route:
        - destination:
            host: webapp-service
            port:
              number: 9080
