manifests/timeout-vote.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: timeout
spec:
  hosts:
    - vote-service.default.svc.cluster.local
  http:
    - timeout: 1s
      route:
        - destination:
            host: vote-service.default.svc.cluster.local
